--- a/css/style.css
+++ b/css/style.css
@@ -47,12 +47,16 @@ body {
   overflow-x: hidden; }
 
 /* line 103, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.page {
+  display: none; }
+
+/* line 107, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question-icon {
   width: 70px;
   height: 70px;
   padding: 5px; }
 
-/* line 109, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 113, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .icon-border {
   background-color: #EBEBEC;
   padding: 5px;
@@ -62,24 +66,110 @@ body {
   width: 100px;
   height: 100px;
   border-radius: 100px;
-  border: 5px solid #006C3A; }
+  border: 6px solid #006C3A; }
 
-/* line 121, ../../../../../Documents/GitHub/Arla/scss/style.scss */
-.grid1 {
-  grid-area: grid1; }
+/*
+.grid1{
+    grid-area: grid1;
+}
+.grid2{
+    grid-area: grid2;
+}
+.grid3{
+    grid-area: grid3;
+}
 
-/* line 124, ../../../../../Documents/GitHub/Arla/scss/style.scss */
-.grid2 {
-  grid-area: grid2; }
+.grid-game-catergories{
+    display: grid;
+    grid-template-areas: 
+    'grid1 grid2'
+    'grid3 grid3'
+    'grid1 grid2';
+    justify-items: center;
 
-/* line 127, ../../../../../Documents/GitHub/Arla/scss/style.scss */
-.grid3 {
-  grid-area: grid3; }
-
-/* line 131, ../../../../../Documents/GitHub/Arla/scss/style.scss */
-.grid-game-catergories {
+}
+*/
+/* line 148, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.grid-test-wrapper {
   display: grid;
-  grid-template-areas: 'grid1 grid2' 'grid3 grid3';
+  grid-template-areas: 'grid1 grid2' 'grid3 grid3' 'grid4 grid5' 'grid6 grid6';
   justify-items: center; }
+  /* line 157, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .grid-test-wrapper a {
+    color: #363E42;
+    text-decoration: none; }
+
+/* line 162, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.grid-icon-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center; }
+  /* line 167, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .grid-icon-wrapper a {
+    color: #363E42;
+    text-decoration: none; }
+
+/* line 173, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.grid-solo {
+  display: grid;
+  justify-items: center;
+  grid-column: 1/3; }
+
+/* line 179, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.question-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  /* line 183, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .question-header h1 {
+    margin: 1vh 0px; }
+
+/* line 188, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.breakline {
+  height: 4px;
+  width: 40%;
+  background-color: #363E42; }
+
+/* line 193, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.question-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column; }
+
+/* line 199, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.question {
+  margin: 2vh 10%; }
+  /* line 201, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .question p {
+    text-align: end; }
+  /* line 204, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .question span {
+    font-weight: 600;
+    text-align: start; }
+
+/* line 210, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.number-text {
+  display: flex;
+  justify-content: space-between; }
+
+/* line 214, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.question-input {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 5px; }
+  /* line 218, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .question-input p {
+    color: #363E42; }
+  /* line 222, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .question-input input {
+    background-color: #D1D2CE;
+    border: none;
+    border-radius: 7px;
+    margin-right: 3px;
+    text-align: end;
+    padding: 5px 5px; }
+  /* line 230, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .question-input input:focus {
+    border: 2px solid #7C8180; }
 
 /*# sourceMappingURL=style.css.map */
