--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,6 +100,10 @@ $lightgray: #D1D2CE;
     overflow-x: hidden;
   }
 
+  .page {
+    display: none;
+  }
+
   .question-icon{
     width: 70px;
     height: 70px;
@@ -115,9 +119,11 @@ $lightgray: #D1D2CE;
     width: 100px;
     height: 100px;
     border-radius: 100px;
-    border: 5px solid $darkgreen
+    border: 6px solid $darkgreen;
+    
   }
 
+  /*
 .grid1{
     grid-area: grid1;
 }
@@ -132,7 +138,98 @@ $lightgray: #D1D2CE;
     display: grid;
     grid-template-areas: 
     'grid1 grid2'
-    'grid3 grid3';
+    'grid3 grid3'
+    'grid1 grid2';
     justify-items: center;
 
 }
+*/
+
+.grid-test-wrapper{
+  display: grid;
+  grid-template-areas: 
+  'grid1 grid2'
+  'grid3 grid3'
+  'grid4 grid5'
+  'grid6 grid6';
+  justify-items: center;
+
+a{
+  color: $darkgray;
+  text-decoration: none;
+}
+}
+.grid-icon-wrapper{
+display: grid;
+grid-template-columns: 1fr 1fr;
+justify-items: center;
+
+a{
+  color: $darkgray;
+  text-decoration: none;
+}
+}
+
+.grid-solo{
+ display: grid;
+ justify-items: center;
+ grid-column: 1/3;
+}
+
+.question-header{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h1{
+    margin: 1vh 0px;
+  }
+}
+
+.breakline{
+  height: 4px;
+  width: 40%;
+  background-color: $darkgray;
+}
+.question-container{
+display: flex;
+justify-content: center;
+flex-direction: column  ;
+}
+
+.question{
+margin: 2vh 10%;
+p{
+  text-align: end;
+}
+ span{
+   font-weight: 600;
+   text-align: start;
+ }
+}
+
+.number-text{
+  display: flex;
+  justify-content: space-between;
+}
+.question-input{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 5px;
+  p{
+    color: $darkgray;
+   
+  }
+  input{
+    background-color: $lightgray;
+    border: none;
+    border-radius: 7px;
+    margin-right: 3px;
+    text-align: end;
+    padding: 5px 5px;
+  }
+  input:focus{
+    border: 2px solid $gray;
+  }
+}
+
+
