--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@ $yellow: #FFCC32;
 $darkgray: #363E42;
 $gray: #7C8180;
 $lightgray: #D1D2CE;
+$gold: #D4AF34;
 
 /*--------------Inheritances-------------*/
 %center {
