--- a/scss/style.scss
+++ b/scss/style.scss
@@ -237,8 +237,8 @@ p{
 /* --------> INFO SIDE STYLES <---------- */
 
 #info{
-  min-height: calc(100vh - 75px);
-  width: 100%;
+height: 100vh;
+width: 100%;
 display: flex;
 background-image: url(../images/milk-phone.png);
 background-size: cover;
@@ -263,7 +263,23 @@ background-size: cover;
   align-items: center;
   flex-direction: column;
 }
+
+ul{
+  list-style-position: outside;
+  list-style-image: url('/images/Arla_Logo_RGB_Small.png');
+}
 li {
   margin-left: 10px;
   display: list-item;
+  line-height: 30px;
+  margin-bottom: 20px;
+}
+
+h4{
+  font-size: 30px;
+  margin: 30px 0 20px;
+}
+
+.infolist{
+width: 80%;
 }
