--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,18 @@ body {
   border-radius: 100px;
   border: 6px solid #006C3A; }
 
+/* line 126, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.gold-border {
+  background-color: #EBEBEC;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+  border: 6px solid #D4AF34; }
+
 /*
 .grid1{
     grid-area: grid1;
@@ -89,78 +101,78 @@ body {
 
 }
 */
-/* line 148, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 160, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .grid-test-wrapper {
   display: grid;
   grid-template-areas: 'grid1 grid2' 'grid3 grid3' 'grid4 grid5' 'grid6 grid6';
   justify-items: center; }
-  /* line 157, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 169, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .grid-test-wrapper a {
     color: #363E42;
     text-decoration: none; }
 
-/* line 162, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 174, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .grid-icon-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center; }
-  /* line 167, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 179, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .grid-icon-wrapper a {
     color: #363E42;
     text-decoration: none; }
 
-/* line 173, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 185, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .grid-solo {
   display: grid;
   justify-items: center;
   grid-column: 1/3; }
 
-/* line 179, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 191, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question-header {
   display: flex;
   flex-direction: column;
   align-items: center; }
-  /* line 183, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 195, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-header h1 {
     margin: 1vh 0px; }
 
-/* line 188, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 200, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .breakline {
   height: 4px;
   width: 40%;
   background-color: #363E42; }
 
-/* line 193, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 205, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question-container {
   display: flex;
   justify-content: center;
   flex-direction: column; }
 
-/* line 199, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 211, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question {
   margin: 2vh 10%; }
-  /* line 201, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 213, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question p {
     text-align: end; }
-  /* line 204, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 216, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question span {
     font-weight: 600;
     text-align: start; }
 
-/* line 210, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 222, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .number-text {
   display: flex;
   justify-content: space-between; }
 
-/* line 214, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 226, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question-input {
   display: flex;
   justify-content: flex-end;
   margin-top: 5px; }
-  /* line 218, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 230, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-input p {
     color: #363E42; }
-  /* line 222, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 234, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-input input {
     background-color: #D1D2CE;
     border: none;
@@ -168,7 +180,7 @@ body {
     margin-right: 3px;
     text-align: end;
     padding: 5px 5px; }
-  /* line 230, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 242, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-input input:focus {
     border: 2px solid #7C8180; }
 
