--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 /*---------------Variabler---------------*/
 /*--------------Inheritances-------------*/
+/* line 18, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+.forumouter {
+  -webkit-box-shadow: 0px 3px 6px 0 rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 0px 3px 6px 0 rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 3px 6px 0 rgba(0, 0, 0, 0.16); }
+
 /* Load Arla Fonts */
 /* Arla Bold Font Face */
 @font-face {
@@ -184,9 +190,9 @@ body {
 
 /* line 247, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .arlalogoinfo {
-  width: 45%;
+  width: 40%;
   height: auto;
-  margin-top: 20px; }
+  margin-top: 15px; }
 
 /* line 253, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .underoverskrift {
@@ -216,11 +222,120 @@ li {
 
 /* line 277, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 h4 {
-  font-size: 30px;
-  margin: 30px 0 20px; }
+  font-size: 25px;
+  margin: 20px 0 15px; }
 
 /* line 282, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .infolist {
   width: 80%; }
+
+/* ----------> FORUM STYLES <---------- */
+/* line 287, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+#forum {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+/* line 296, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+.forumouter {
+  display: grid;
+  justify-content: center;
+  width: 95%;
+  height: 170px;
+  border: 3px solid #006C3A;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 25% 50% 25%; }
+  /* line 309, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  .forumouter img {
+    height: 70%;
+    margin: 5px; }
+  /* line 314, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  .forumouter p {
+    font-size: 13px; }
+
+/* line 320, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+.chatcow {
+  display: grid;
+  grid-row: 1/3;
+  grid-column: 3/4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid #D1D2CE;
+  border-radius: 5px; }
+
+/* line 331, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+.forumpost {
+  display: grid;
+  grid-row: 2/3;
+  grid-column: 1/3;
+  padding: 5px; }
+
+/* line 338, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+.profilbillede {
+  display: grid;
+  grid-row: 1/2;
+  grid-column: 1/2;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 5px; }
+  /* line 347, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  .profilbillede img {
+    height: 70%;
+    padding: 0;
+    padding-right: 5px;
+    margin: 0; }
+
+/* line 355, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+.flag {
+  display: grid;
+  grid-row: 1/2;
+  grid-column: 2/3;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 5px; }
+  /* line 363, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  .flag img {
+    height: 70%;
+    padding: 0;
+    padding-left: 5px;
+    margin: 0; }
+
+/* line 372, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+h5 {
+  font-size: 17px; }
+
+/* line 376, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+.svar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 5px; }
+  /* line 382, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  .svar img {
+    height: 100%;
+    padding: 0;
+    padding-right: 5px;
+    margin: 0; }
+
+/* line 390, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+.comment {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px; }
+
+/* line 397, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+.tid {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 5px; }
 
 /*# sourceMappingURL=style.css.map */
