--- a/scss/style.scss
+++ b/scss/style.scss
@@ -245,9 +245,9 @@ background-size: cover;
 }
 
 .arlalogoinfo{
-  width: 45%;
+  width: 40%;
   height: auto;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 .underoverskrift{
@@ -275,10 +275,128 @@ li {
 }
 
 h4{
-  font-size: 30px;
-  margin: 30px 0 20px;
+  font-size: 25px;
+  margin: 20px 0 15px;
 }
 
 .infolist{
 width: 80%;
+}
+
+/* ----------> FORUM STYLES <---------- */
+#forum{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.forumouter{
+  display: grid;
+  justify-content: center;
+  width: 95%;
+  height: 170px;
+  border: 3px solid $darkgreen;
+  border-radius: 5px;
+  @extend %shadow;
+  margin-bottom: 15px;
+
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 25% 50% 25%;
+
+img{
+  height: 70%;
+  margin: 5px;
+
+}
+p{
+  font-size: 13px;
+}
+  
+}
+
+.chatcow {
+  display: grid;
+  grid-row: 1/3;
+  grid-column: 3/4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid $lightgray;
+  border-radius: 5px;
+}
+
+.forumpost{
+  display: grid;
+  grid-row: 2/3;
+  grid-column: 1/3;
+  padding: 5px;
+}
+
+.profilbillede{
+  display: grid;
+  grid-row: 1/2;
+  grid-column: 1/2;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 5px;
+
+  img{
+    height: 70%;
+    padding: 0;
+    padding-right: 5px;
+    margin: 0;
+    }
+}
+
+.flag{
+display: grid;
+grid-row: 1/2;
+grid-column: 2/3;
+display: flex;
+justify-content: flex-end;
+align-items: center;
+padding: 5px;
+img{
+height: 70%;
+padding: 0;
+padding-left: 5px;
+margin: 0;
+}
+
+}
+
+h5{
+  font-size: 17px;
+}
+
+.svar{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 5px;
+
+  img{
+    height: 100%;
+    padding: 0;
+    padding-right: 5px;
+    margin: 0;
+    }
+}
+
+.comment{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+}
+
+.tid{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 5px
 }
