--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,18 @@ body {
   border-radius: 100px;
   border: 6px solid #006C3A; }
 
+/* line 128, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+.gold-border {
+  background-color: #EBEBEC;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+  border: 6px solid #D4AF34; }
+
 /*
 .grid1{
     grid-area: grid1;
@@ -96,78 +108,78 @@ body {
 
 }
 */
-/* line 150, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 162, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .grid-test-wrapper {
   display: grid;
   grid-template-areas: 'grid1 grid2' 'grid3 grid3' 'grid4 grid5' 'grid6 grid6';
   justify-items: center; }
-  /* line 159, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 171, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .grid-test-wrapper a {
     color: #363E42;
     text-decoration: none; }
 
-/* line 164, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 176, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .grid-icon-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center; }
-  /* line 169, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 181, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .grid-icon-wrapper a {
     color: #363E42;
     text-decoration: none; }
 
-/* line 175, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 187, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .grid-solo {
   display: grid;
   justify-items: center;
   grid-column: 1/3; }
 
-/* line 181, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 193, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .question-header {
   display: flex;
   flex-direction: column;
   align-items: center; }
-  /* line 185, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 197, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .question-header h1 {
     margin: 1vh 0px; }
 
-/* line 190, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 202, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .breakline {
   height: 4px;
   width: 40%;
   background-color: #363E42; }
 
-/* line 195, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 207, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .question-container {
   display: flex;
   justify-content: center;
   flex-direction: column; }
 
-/* line 201, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 213, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .question {
   margin: 2vh 10%; }
-  /* line 203, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 215, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .question p {
     text-align: end; }
-  /* line 206, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 218, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .question span {
     font-weight: 600;
     text-align: start; }
 
-/* line 212, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 224, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .number-text {
   display: flex;
   justify-content: space-between; }
 
-/* line 216, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 228, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .question-input {
   display: flex;
   justify-content: flex-end;
   margin-top: 5px; }
-  /* line 220, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 232, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .question-input p {
     color: #363E42; }
-  /* line 224, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 236, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .question-input input {
     background-color: #D1D2CE;
     border: none;
@@ -175,12 +187,12 @@ body {
     margin-right: 3px;
     text-align: end;
     padding: 5px 5px; }
-  /* line 232, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 244, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .question-input input:focus {
     border: 2px solid #7C8180; }
 
 /* --------> INFO SIDE STYLES <---------- */
-/* line 239, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 251, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 #info {
   height: 100vh;
   width: 100%;
@@ -188,13 +200,13 @@ body {
   background-image: url(../images/milk-phone.png);
   background-size: cover; }
 
-/* line 247, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 259, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .arlalogoinfo {
   width: 40%;
   height: auto;
   margin-top: 15px; }
 
-/* line 253, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 265, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .underoverskrift {
   color: #363E42;
   font-weight: 700;
@@ -202,35 +214,35 @@ body {
   width: 160px;
   text-align: center; }
 
-/* line 260, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 272, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .infoinner {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column; }
 
-/* line 267, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 279, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 ul {
   list-style-position: outside; }
 
-/* line 270, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 282, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 li {
   margin-left: 10px;
   display: list-item;
   line-height: 30px;
   margin-bottom: 20px; }
 
-/* line 277, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 289, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 h4 {
   font-size: 25px;
   margin: 20px 0 15px; }
 
-/* line 282, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 294, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .infolist {
   width: 80%; }
 
 /* ----------> FORUM STYLES <---------- */
-/* line 287, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 299, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 #forum {
   height: 100%;
   width: 100%;
@@ -238,7 +250,7 @@ h4 {
   flex-direction: column;
   align-items: center; }
 
-/* line 296, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 308, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .forumouter {
   display: grid;
   justify-content: center;
@@ -249,15 +261,15 @@ h4 {
   margin-bottom: 15px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 25% 50% 25%; }
-  /* line 309, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 321, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .forumouter img {
     height: 70%;
     margin: 5px; }
-  /* line 314, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 326, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .forumouter p {
     font-size: 13px; }
 
-/* line 320, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 332, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .chatcow {
   display: grid;
   grid-row: 1/3;
@@ -268,14 +280,14 @@ h4 {
   border: 3px solid #D1D2CE;
   border-radius: 5px; }
 
-/* line 331, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 343, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .forumpost {
   display: grid;
   grid-row: 2/3;
   grid-column: 1/3;
   padding: 5px; }
 
-/* line 338, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 350, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .profilbillede {
   display: grid;
   grid-row: 1/2;
@@ -284,14 +296,14 @@ h4 {
   justify-content: flex-start;
   align-items: center;
   padding: 5px; }
-  /* line 347, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 359, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .profilbillede img {
     height: 70%;
     padding: 0;
     padding-right: 5px;
     margin: 0; }
 
-/* line 355, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 367, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .flag {
   display: grid;
   grid-row: 1/2;
@@ -300,38 +312,38 @@ h4 {
   justify-content: flex-end;
   align-items: center;
   padding: 5px; }
-  /* line 363, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 375, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .flag img {
     height: 70%;
     padding: 0;
     padding-left: 5px;
     margin: 0; }
 
-/* line 372, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 384, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 h5 {
   font-size: 17px; }
 
-/* line 376, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 388, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .svar {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   padding: 5px; }
-  /* line 382, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 394, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
   .svar img {
     height: 100%;
     padding: 0;
     padding-right: 5px;
     margin: 0; }
 
-/* line 390, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 402, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .comment {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 5px; }
 
-/* line 397, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 409, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
 .tid {
   display: flex;
   justify-content: flex-start;
